:technologist: initialize test user with an encrypted password